# home

./: .gitignore  requestment.txt
backend/: main.py  pyproject.toml  run.py
backend/App/Tests/others/: Service.py  class_test.py  test_js.html  test_js.js
backend/App/Tests/services/: config.py
backend/App/services/: Monitoring.py  __init__.py  models.py  routes.py
backend/App/services/Admin/: __init__.py  app.py  config.py  models.py  routes.py
backend/App/services/Home/: __init__.py
backend/Apps/services/Auth/: info.py
backend/frontend/: package-lock.json
backend/frontend/src/: main.jsx
backend/frontend/src/AuthAdmin/: Administrator.jsx
backend/frontend/src/AuthAdmin/AuAdCss/: Admin.css  Autho.css
backend/frontend/src/Main/: SystemWeatherTrack.jsx
backend/services/: Monitoring.py  __init__.py  config.py  routes.py
backend/services/Auth/: Config.py  Models.py  Routes.py  app.py  info.py  views.py
backend/services/Auth/models/: users.py
frontend/: App.css  App.jsx  index.html  main.jsx  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  App.scss  AuthContext.jsx  PrivateRoute.jsx  RoutePage.jsx  SystemInfo.jsx  SystemInfo.scss  main.jsx  squishyBox.jsx
frontend/src/Admin/: AdminPanel.jsx
frontend/src/AuthAdmin/: Administrator.jsx  Authorization.jsx
frontend/src/Loading/: Loading.css  WebsiteLoading.jsx
frontend/src/Main/: Config.jsx  Error.jsx  SystemWeatherTrack.jsx
frontend/src/auth/: loginPage.jsx  regPage.jsx  stylePage.scss
frontend/src/components/: AuthContext.jsx  (+2 more)
(+33 files in other folders)
