[project]
name = "backend"
version = "0.1.0"
description = "Microservice for communicate with React"

requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.1.0",
    "flask-restful>=0.3.10",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
]
